--- a/.github/workflows/prettier-fix.yml
+++ b/.github/workflows/prettier-fix.yml
@@ -1,17 +1,17 @@
----
-name: Prettier-fix
-on: [pull_request, push]
+name: Prettier
+on:
+  push:
+    branches:
+      - main
 
 permissions:
   contents: write
 
 jobs:
   prettier-fix:
+    if: github.actor != 'github-actions[bot]' # Run only if the actor is not the GitHub Actions bot
     runs-on: ubuntu-latest
-    # Limit the running time
     timeout-minutes: 10
     steps:
-      - name: Invoke the Prettier fix
-        uses: WorkOfStan/prettier-fix@v1.0.0
-        #with:
-        #  node-version: "20"
+      - name: Format Code
+        uses: HorizonCode/prettier-fix@1.0
